--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>제이쿼리 타이틀</h1>
 
-    <button id="changeBtn">변경</button>
+    <button class="btn btn-primary" id="changeBtn">변경</button>
     
 </body>
 </html>
