--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>웹팩 연습</title>
     <script src="dist/app.js"></script>
+    <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
     <h1>제이쿼리 타이틀</h1>
